[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10.5"
strum = "0.24"
strum_macros = "0.24"
ptree = "0.4"

[dependencies.uuid]
version = "1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "1_calorie_counting"
harness = false